# doc-qa

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
alembic/: env.py
alembic/versions/: 2026_03_05_2059-d688190eae3e_create_documents_and_conversations.py  2026_03_08_0641-d29c95bb7fbf_add_document_chunks.py  2026_03_08_0703-aa8e24d1861f_add_llm_traces.py  2026_03_09_0346-ea3966f718f1_alter_conversations.py  2026_03_09_0516-3f857fb4785e_alter_llm_traces_document_id_nullable_.py
src/: __init__.py  main.py
src/agent/: executor.py  tools.py
src/api/: deps.py
src/api/v1/: router.py
src/api/v1/endpoints/: chat.py  document.py
src/core/: celery_app.py  config.py  embedding.py  events.py  hybrid_search.py  logger.py  reranker.py  security.py  summary_memory.py  vector_store.py
src/core/cache/: cache.py  cache_key.py  decorators.py  redis_ops.py
src/core/rate_limit/: algorithms.py  decorators.py
src/db/: init_db.py  session.py
src/middleware/: logging.py  request_context.py
src/models/: __init__.py  base.py  chunk.py  conversation.py  document.py  llm_trace.py  mixins.py
src/repository/: base.py  chunk.py  conversation.py  document.py  llm_trace.py
src/schemas/: __init__.py  base.py  chat.py  document.py  mixins.py
src/service/: chat.py  document.py
src/tasks/: document.py
static/: chat.html  rag_learning.md  rag_roadmap.md  test_frontend.html
